--- a/events/package.json
+++ b/events/package.json
@@ -29,6 +29,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@ast-grep/cli": "^0.40.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
     "@nestjs/cli": "^11.0.0",
